# dwd-api-rs

./: .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  http-client.env.json  request-examples.http
.github/workflows/: format.yml  rust.yml
src/: errors.rs  kml.rs  main.rs  mosmix_cfg.rs  weather_forecast.rs  weather_report.rs
