[package]
name = "dwd-api"
version = "0.3.0"
authors = ["Nerixyz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"

tokio = { version = "1.11", features = ["full"] }
reqwest = { version = "0.11", features = ["default", "stream"] }

serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
csv = "1.1"

zip = "0.6"
lazy_static = "1.4"
chrono = "0.4"
maplit = "1.0"
regex = "1.5"

derive_more = { version = "0.99", features = [ "error", "display"] }

dotenv = "0.15"
itertools = "0.11.0"
