[package]
name = "dwd-api"
version = "0.4.0"
authors = ["Nerixyz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
actix-web-error = "0.2"

tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["default", "stream"] }

serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
csv = "1.3"

zip = "0.6"
lazy_static = "1.4"
chrono = "0.4"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10"

thiserror = "1.0"

dotenv = "0.15"
itertools = "0.12.0"
